# resume_matcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260408_0001_initial_schema.py
src/: main.py
src/api/middleware/: correlation.py
src/api/routes/: batch_routes.py  candidate_routes.py  evaluation_routes.py  health_routes.py  job_routes.py
src/api/schemas/: __init__.py  base_schema.py  batch_schema.py  candidate_schema.py  evaluation_schema.py  job_schema.py
src/clients/: cache_client.py  document_extractor.py  storage_client.py  tracer_client.py
src/clients/resume_matcher/: __init__.py  client.py  error_handler.py  output_parser.py
src/core/config/: settings.py
src/core/constants/: app_constants.py
src/core/exceptions/: app_exceptions.py
src/core/logging/: logger.py
src/crew/: __init__.py  agent_factory.py  agents.yaml  builder.py  llm_factory.py  output_models.py  task_factory.py  tasks.yaml  version.py
src/crew/callbacks/: langfuse_tracer.py  token_guard.py
src/crew/tools/: skill_normalizer.py
src/db_models/: __init__.py  base.py  batch_orm.py  candidate_orm.py  job_orm.py
src/entities/: __init__.py  batch.py  candidate.py  evaluation_result.py  extracted_document.py  job_requirement.py
src/interfaces/: __init__.py  base_batch_repository.py  base_cache_client.py  base_candidate_repository.py  base_document_extractor.py  base_job_repository.py  base_resume_matcher.py  base_storage_client.py  base_tracer_client.py
src/providers/: __init__.py  infrastructure.py  repositories.py  services.py
src/repositories/: __init__.py  batch_repository.py  candidate_repository.py  job_repository.py
src/services/: __init__.py  cancel_batch.py  check_batch_status.py  create_job.py  delete_candidate.py  evaluate_resume.py  ingest_candidate.py  list_candidates.py  mask_pii.py  prepare_cv_text.py  review_candidate.py  submit_batch.py
src/tasks/: celery_app.py  evaluate_single_task.py  process_batch_task.py
tests/: conftest.py
tests/integration/test_api/: test_health.py  test_job_routes.py
tests/integration/test_repositories/: test_batch_repository.py  test_job_repository.py
tests/unit/test_clients/: test_error_handler.py  test_output_parser.py
tests/unit/test_crew/: test_builder.py  test_task_factory.py
tests/unit/test_entities/: test_batch.py  test_evaluation_result.py
tests/unit/test_services/: test_batch_atomic.py  test_cancel_batch.py  test_delete_candidate.py  test_ingest_candidate.py  test_mask_pii.py  test_review_candidate.py  test_submit_batch.py  test_temp_file_fix.py
