[project]
name = "resume-matcher"
version = "0.1.0"
description = "AI-powered CV evaluation backend with CrewAI multi-agent pipeline"
# Batasi ke 3.12 saja — menghilangkan conflict resolver untuk Python 3.14
# yang tidak bisa resolve embedchain/transformers pada crewai 0.x
requires-python = ">=3.12,<3.13"

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "python-multipart>=0.0.12,<0.1.0",

    # --- Validation & Settings ---
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.14.0,<2.0.0",

    # --- Queue & Cache ---
    "celery[redis]>=5.4.0,<5.5.0",
    "redis>=5.2.0,<6.0.0",

    # --- File I/O ---
    "aiofiles>=24.1.0,<25.0.0",

    # --- HTTP Client ---
    "httpx>=0.28.0,<0.29.0",

    # --- AI / Agent ---
    # crewai 1.x: menghapus embedchain/transformers conflict dari 0.x series.
    # crewai-tools 1.x: hanya menyediakan BaseTool + utility tools ringan.
    # API yang kita pakai (Agent, Task, Crew, Process, LLM, BaseTool)
    # tetap tersedia dan tidak breaking di 1.x.
    "crewai>=1.0.0,<2.0.0",
    "crewai-tools>=1.0.0,<2.0.0",
    "litellm>=1.74,<1.80",
    "apscheduler>=3.10.0,<4.0.0",
    "email-validator>=2.0.0",

    # --- Document Extraction ---
    # docling >= 2.20 + rapidocr: tidak butuh transformers di main deps.
    "transformers>=4.49.0",
    "docling>=2.20.0,<3.0.0",
    "rapidocr-onnxruntime>=1.3.24",

    # --- Observability ---
    "langfuse>=2.50.0,<3.0.0",
    "structlog>=24.4.0,<25.0.0",
    "rich>=13.9.0,<14.0.0",

    # --- Rate Limiting ---
    "slowapi>=0.1.9,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<0.29.0",
    "ruff>=0.8.0,<0.9.0",
    "mypy>=1.13.0,<2.0.0",
    "faker>=20.0.0",
]

[tool.uv]
override-dependencies = [
    "tokenizers>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true